removing md files, they look weird.

--- a/Fall_2019/Intro_to_R_LemayLab_with_solutions.Rmd
+++ b/Fall_2019/Intro_to_R_LemayLab_with_solutions.Rmd
@@ -1,13 +1,14 @@
 ---
 title: "Intro_to_R_with_solutions"
 output:
+  md_document:
+    toc: true
   html_document:
     df_print: paged
     toc: true
     toc_float: true
     number_sections: true
-    keep_md: true
-    
+
 ---
 
 # Introduction to R
